Fix: Home Page Category Grid Spacing For Mobiles

--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -274,7 +274,9 @@
       }
 
       .home-page-category-grid {
-        margin: 0 43px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
 
         h2 {
           margin-bottom: 24px;
